ENV.delete should return the result of block on non-existing key

[Bug #16173]